# rseal

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: errors.rs  lib.rs  rseal.rs
